# gomoku

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  a.out  alias.sh  config.py  docker-compose.yml  env.example  gomoku_conda.sh  log.md  main.py  plan.md  plan_deploy.md  report_antigravity.md  todo.md
alphazero/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.toml  requirements.313.txt  requirements.cpu.txt  requirements.cuda.txt  requirements.rocm.txt  requirements.txt  sanity.py  speed_test.py  verify_opening.py
alphazero/adapters/api_fastapi/: __init__.py  websocket.py
alphazero/ai/: ai_config.py  arena.py  dataset.py  policy_value_net.py  pv_mcts.py  replay_buffer.py  self_play.py  state_encoder.py  train.py  train_loop.py
alphazero/configs/: 13x13_local_8h.yaml  15x15_local_test.yaml  5x5_local_test.yaml  9x9_local_test.yaml  benchmark_19x19_local.yaml  benchmark_elo1800.yaml  config_alphazero_mp_test.yaml  config_alphazero_test.yaml  config_alphazero_vectorize_test.yaml  deploy.yaml  elo1800-v1-day1.yaml  elo1800-v1-day2.yaml  elo1800-v1-day3.yaml  elo1800-v1-day4.yaml  elo1800-v2-day1.yaml  elo1800-v2-day2.yaml  elo1800-v2-day3.yaml  elo1800-v2-day4.yaml  elo1800-v3-day1-5.yaml  elo1800-v3-day1.yaml  elo1800-v3-day2.yaml  elo1800-v3-day3.yaml  elo1800-v3-day4.yaml  elo1800-v4-day0.5.yaml  elo1800-v4-day1.yaml  elo1800-v4-day2.5.yaml  elo1800-v4-day2.yaml  elo1800-v4-day3.5.yaml  elo1800-v4-day3.yaml  elo1800-v4-day4.5.yaml  elo1800-v4-day4.yaml  elo1800-v4-day5.yaml  elo1800-v4-day6-recover.yaml  elo1800-v4-day6-recover2.yaml  elo1800-v4-day6.yaml  elo1800-v4-day7.yaml  elo1800-v4-day8.yaml  example_gcp.yaml  local_play.yaml
alphazero/core/: board.py  constants.py  game_config.py  gomoku.py
alphazero/core/rules/: capture.py  doublethree.py  terminate.py  terminating_condition.py
alphazero/cpp/: CMakeLists.txt
alphazero/cpp/include/: ForbiddenPointFinder.h  GomokuCore.h  MctsEngine.h
alphazero/cpp/src/: GomokuCore.cpp  MctsEngine.cpp  MctsNode.h  RunBatchSimulation_snippet.cpp  bindings.cpp  gomoku_bindings.cpp
alphazero/documents/: cloud_instructions.md  document.ko.MD  documents.index.MD
alphazero/documents/refactor/: asynchronous_pipelined_mcts_guide_ko.md  day6_recover_analysis.md  gmk_refactor_A_to_Z.md  missing_feature.md
alphazero/gmk/: PolicyValueNet.py  alphazero.py  alphazero_parallel.py  eval.py  game_config.py  gomoku.py  main2.py  main3.py  main4.py  main5-2.py  main5.py  mcts.py  model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt  model_5.pt  model_6.pt  model_7.pt  model_8.pt  model_9.pt  model_config.json  optimizer_0.pt  optimizer_1.pt  optimizer_2.pt  optimizer_3.pt  optimizer_4.pt  optimizer_5.pt  optimizer_6.pt  optimizer_7.pt  optimizer_8.pt  optimizer_9.pt  policy_value_net.py  pvmcts.py  pvmcts_parallel.py  train.py
alphazero/gmk/rules/: terminate.py
alphazero/gmk/ttl/: ttl.py
alphazero/gmk/tuto/: 5_eval.py
alphazero/gomoku/alphazero/: agent.py  types.py
alphazero/gomoku/core/: game_config.py  gomoku.py
alphazero/gomoku/inference/: base.py  local.py  mp_client.py  mp_server.py  onnx_inference.py  ray_client.py
alphazero/gomoku/model/: __init__.py  model_helpers.py  policy_value_net.py
alphazero/gomoku/pvmcts/: pvmcts.py  strategies.py  treenode.py
alphazero/gomoku/scripts/: debug_model.py  eval.py  train.py
alphazero/gomoku/utils/: io_helpers.py  manifest.py  paths.py  progress.py  serialization.py  state_dict_utils.py
alphazero/infra/: Dockerfile.prod
alphazero/infra/bootstrap/: 01_setup_iam.sh  02_setup_network.sh  03_setup_storage.sh  04_check_quotas.sh  env_config.sh
alphazero/infra/cluster/: cluster_elo1800.yaml  purge_gcp.sh  ray_attach.sh  reserve_gpu.sh  reserver_vm.sh  restart_cluster.sh
alphazero/infra/image/: Dockerfile.prod  Dockerfile.py313-cpu  Dockerfile.py313-cu124  buildkitd.toml
alphazero/routers/: websocket.py
alphazero/rules/: doublethree.py
alphazero/server/: __init__.py  engine.py  protocol.py  websocket.py
alphazero/services/: gomoku.py
alphazero/tests/: helpers.py
alphazero/tests/alphazero/: agent_test.py  conftest.py
alphazero/tests/core/: gomoku_basic_test.py  gomoku_doublethree_color_test.py  gomoku_encoding_integrity_test.py  (+2 more)
alphazero/tictactoe/: main.py  main2.py  main3.py  main4.py  mcts.py  model_0.pt  model_1.pt  model_2.pt  optimizer_0.pt  optimizer_1.pt  optimizer_2.pt  polictvaluenet.py  selfplay.py  tictactoe.py
(+401 files in other folders)
